Update breaking changes when loading as Chrome extension - To fix container going out of view in extension view     CSS edits:         - .container {padding: 200px -> 0px}         - h1 {font-size: 100px -> 70px}
- To fix inline-js script error preventing load by Chrome extension:
    - Move all the JS to main.js
    - Create id "categorySelector" for button.btn in index.html (the category button)
    - Add selector and click eventListener for categorySelector in main.js
    - Renamed the dropdown function myFunction -> dropdownToggle in main.js

- Added comments on main.js for clarity of each block

- manifest.json throwing several errors
    - Had to change: manifest version, content_scripts url
    - Had to add title
    - Had to add the 'action' for it to popup when clicked

--- a/static/style.css
+++ b/static/style.css
@@ -10,14 +10,14 @@
     justify-content: center;
     align-items: center;
     margin: 20px 20px;
-    padding: 300px;
+    /* padding: 300px; TODO: Adjust down to extension size */
     /* height: 400px;
     width: 600px; */
 }
 
 h1 {
     color: #000;
-    font-size: 100px;
+    font-size: 70px;
 }
 
 .btns {
